# EPCalculator

./: .dockerignore  .dockerignore.v2  .gitignore  .money.swp  2025-09-29-this-session-is-being-continued-from-a-previous-co.txt  CLAUDE.txt  CLEANUP-COMPLETE.md  COMPARISON_REPORT.md  CONVERGENCE-FIX-SUMMARY.md  DEPLOYMENT-READY.md  DOCKER-PUSH-TROUBLESHOOTING.md  DOCKER-QAM-READY.md  DOCUMENTATION_HUB_IMPLEMENTATION.md  Dockerfile  Dockerfile.production  Dockerfile.simple  EPCalculator v2 - Error Probability Calculator.html  LICENSE  MAXWELL-BOLTZMANN-DEPLOYMENT.md  Makefile  README.md  README.txt  SNR-UNIT-TOGGLE.md  a.out  add-plot-translations.cjs  benchmark-direct-cpp.cpp  benchmark-performance.js  benchmark_clean  benchmark_clean_comparison.cpp  benchmark_clean_old  benchmark_hybrid  benchmark_logspace  build-docker.sh  careful_debug  careful_debug.cpp  chatgpt.txt  compare_cpp_python  compare_cpp_python.cpp  compare_implementations  compare_implementations.cpp  (+170 more)
EPCalculator v2 - Error Probability Calculator_files/: client.es  css2.css  main.js
assistant/: assistant.py  chatbot.py  openRouterv2.py
chatbot/: chatbot.py  chatbotV2.py  openRouterv2.py  parser.py
data/: epcalculator.db  epcalculator.db-shm  epcalculator.db-wal
deploy/: Dockerfile  Dockerfile.node  Dockerfile.v2
docs/: FEATURE_DATA_IMPORT.md  FIX-IMPLEMENTATION-RESULTS.md  FRONTEND.md  NUMERICAL-FIX-IMPLEMENTATION.md  NUMERICAL-OVERFLOW-ANALYSIS.md  OVERFLOW-FIX-SUMMARY.md  OVERFLOW-TEST-RESULTS.md  PLOT-STYLING-CHANGES.md  PRECISION-COMPARISON.md  QAM-IMPLEMENTATION.md  QUADRATURE-CONVERGENCE-STUDY.md  QUICK-DEPLOY.md  RANCHER-DEPLOYMENT.md  README.v2.md  REGISTRY-DEPLOYMENT.md  performance-comparison.md
eigen-3.4.0/: .gitignore
exponents/: COMPARISON_SUMMARY.md  COMPUTATION_PARAMETERS.md  E0_QUADRATURE_RESULTS.md  E_of_R_RESULTS.md  RESULTS_SNR3_RHO1.md  RHO_CONVERGENCE_RESULTS.md  analyze_dip_causes.py  analyze_dip_mechanism.py  (+122 more)
wasm/: CMakeLists.txt  wasm_interface.cpp
(+213 files in other folders)
